--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-28T17:03:56.498276300Z",
-     "start_time": "2023-11-28T17:03:56.491330700Z"
+     "end_time": "2023-11-29T15:00:42.193241700Z",
+     "start_time": "2023-11-29T15:00:37.112580600Z"
     }
    },
    "outputs": [],
@@ -16,6 +16,31 @@
     "import torch\n",
     "import torch.nn as nn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Exercise 2. (A)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -28,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "[1, 0, 0, 1, 0, 1, 1, 1, 1, 0]"
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,8 +92,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T17:24:37.670795500Z",
-     "start_time": "2023-11-28T17:24:37.645079100Z"
+     "end_time": "2023-11-29T15:01:04.550685400Z",
+     "start_time": "2023-11-29T15:01:04.529620300Z"
     }
    }
   },
@@ -83,62 +108,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "outputs": [
     {
-     "data": {
-      "text/plain": "[0.15633009706732018,\n 0.0,\n 0.0,\n 0.2702283027548262,\n 0.0,\n 0.21347090311639716,\n 0.3658068211806669,\n 0.544772959537148,\n 0.16440326996208335,\n 0.0]"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word: and, TF: 1, IDF: 0.10536051565782635, TF-IDF: 0.10536051565782635\n",
+      "Word: I, TF: 1, IDF: 0.5108256237659907, TF-IDF: 0.5108256237659907\n",
+      "Word: eat, TF: 1, IDF: 0.9162907318741551, TF-IDF: 0.9162907318741551\n",
+      "Word: the, TF: 1, IDF: 0.16251892949777494, TF-IDF: 0.16251892949777494\n",
+      "Word: strawberry, TF: 1, IDF: 2.995732273553991, TF-IDF: 2.995732273553991\n",
+      "Word: pie, TF: 1, IDF: 1.6094379124341003, TF-IDF: 1.6094379124341003\n"
+     ]
     }
    ],
    "source": [
-    "def tf(term, document):\n",
-    "    term_count = document.count(term)\n",
-    "    total_terms = len(document)\n",
+    "vocabulary = {\n",
+    "    'and': 90,\n",
+    "    'apple': 30,\n",
+    "    'banana': 15,\n",
+    "    'eat': 40,\n",
+    "    'hate': 10,\n",
+    "    'I': 60,\n",
+    "    'pie': 20,\n",
+    "    'strawberry': 5,\n",
+    "    'the': 85,\n",
+    "    'they': 30\n",
+    "}\n",
     "\n",
-    "    return term_count / total_terms if total_terms > 0 else 0.0\n",
+    "# Given sentence\n",
+    "sentence = \"You and I eat the strawberry pie\"\n",
     "\n",
-    "def idf(term, document_frequency, total_documents):\n",
-    "    term_document_frequency = document_frequency.get(term, 0)\n",
+    "# Calculate TF\n",
+    "tf = {}\n",
+    "for word in sentence.split():\n",
+    "    tf[word] = tf.get(word, 0) + 1\n",
     "\n",
-    "    return math.log(total_documents / (term_document_frequency + 1)) + 1\n",
-    "\n",
-    "def tfidf(term, document, document_frequency, total_documents):\n",
-    "\n",
-    "    return tf(term, document) * idf(term, document_frequency, total_documents)\n",
-    "\n",
-    "def compute_tfidf_representation(sentence, vocabulary, document_frequency, total_documents):\n",
-    "    words = sentence.split()\n",
-    "    tfidf_vector = [tfidf(word, words, document_frequency, total_documents) for word in vocabulary]\n",
-    "\n",
-    "    return tfidf_vector\n",
-    "\n",
-    "vocabulary = ['and', 'apple', 'banana', 'eat', 'hate', 'I', 'pie', 'strawberry', 'the', 'they']\n",
-    "document_frequency = {'and': 90, 'apple': 30, 'banana': 15, 'eat': 40, 'hate': 10, 'I': 60, 'pie': 20, 'strawberry': 5, 'the': 85, 'they': 30}\n",
+    "# Calculate IDF\n",
+    "idf = {}\n",
     "total_documents = 100\n",
+    "for word in vocabulary:\n",
+    "    document_frequency = vocabulary[word]\n",
+    "    idf[word] = math.log(total_documents / document_frequency)\n",
     "\n",
+    "# Calculate TF-IDF\n",
+    "tf_idf = {}\n",
+    "for word in tf:\n",
+    "    try:\n",
+    "        tf_idf[word] = tf[word] * idf[word]\n",
+    "    except KeyError:\n",
+    "        pass\n",
     "\n",
-    "input_sentence = \"You and I eat the strawberry pie\"\n",
-    "\n",
-    "\n",
-    "tfidf_result = compute_tfidf_representation(input_sentence, vocabulary, document_frequency, total_documents)\n",
-    "\n",
-    "tfidf_result"
+    "# Print TF-IDF representation\n",
+    "for word in tf_idf:\n",
+    "    print(f\"Word: {word}, TF: {tf[word]}, IDF: {idf[word]}, TF-IDF: {tf_idf[word]}\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T17:27:06.403348500Z",
-     "start_time": "2023-11-28T17:27:06.396863300Z"
+     "end_time": "2023-11-29T15:07:10.585049Z",
+     "start_time": "2023-11-29T15:07:10.562989600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -179,7 +215,35 @@
     "print(\"TF-IDF representation:\", tfidf_representation)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T18:45:48.185124400Z",
+     "start_time": "2023-11-28T18:45:48.176324100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T18:46:40.400100500Z",
+     "start_time": "2023-11-28T18:46:40.376338700Z"
+    }
    }
   },
   {
@@ -264,6 +328,74 @@
     "ExecuteTime": {
      "end_time": "2023-11-28T17:03:43.860357400Z",
      "start_time": "2023-11-28T17:03:39.407274100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "class RNNLM(nn.Module):\n",
+    "    \"\"\"Recurrent Neural Network (RNN) Language Model\"\"\"\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, num_layers, rnn_type='lstm'):\n",
+    "        super(RNNLM, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        if rnn_type == 'lstm':\n",
+    "            self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True)\n",
+    "        elif rnn_type == 'gru':\n",
+    "            self.rnn = nn.GRU(embedding_dim, hidden_dim, num_layers, batch_first=True)\n",
+    "        self.linear = nn.Linear(hidden_dim, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass through the RNNLM model\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input sequence of token indices (integers)\n",
+    "                Shape: (batch_size, seq_len)\n",
+    "\n",
+    "        Returns:\n",
+    "            logits (torch.Tensor): Unnormalized log probabilities of the next word for each token in the input sequence\n",
+    "                Shape: (batch_size, seq_len, vocab_size)\n",
+    "        \"\"\"\n",
+    "        embedded = self.embedding(x)\n",
+    "        _, hidden = self.rnn(embedded)\n",
+    "        logits = self.linear(hidden)\n",
+    "        return logits\n",
+    "\n",
+    "    def generate(self, x, h0, no):\n",
+    "        \"\"\"\n",
+    "        Generate text using the greedy decoding algorithm\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input token (integer)\n",
+    "                Shape: (1,)\n",
+    "            h0 (tuple): Initial hidden state of the RNN\n",
+    "                Shape: (num_layers, batch_size, hidden_dim)\n",
+    "            no (int): Desired number of tokens to be generated\n",
+    "\n",
+    "        Returns:\n",
+    "            decoded_tokens (torch.Tensor): Sequence of token indices (integers) representing the generated text\n",
+    "                Shape: (no,)\n",
+    "        \"\"\"\n",
+    "        decoded_tokens = torch.empty(no, dtype=torch.long, device=x.device)\n",
+    "        for i in range(no):\n",
+    "            embedded = self.embedding(x.unsqueeze(0))\n",
+    "            output, h0 = self.rnn(embedded, h0)\n",
+    "            logits = self.linear(output.squeeze(0))\n",
+    "            pred = logits.argmax(dim=1)\n",
+    "            decoded_tokens[i] = pred\n",
+    "\n",
+    "            x = pred.unsqueeze(0)\n",
+    "\n",
+    "        return decoded_tokens"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-29T15:09:18.527840100Z",
+     "start_time": "2023-11-29T15:09:18.507841300Z"
     }
    }
   },
