TF-IDF double checked

--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-11-29T15:00:42.193241700Z",
      "start_time": "2023-11-29T15:00:37.112580600Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -19,47 +19,56 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Exercise 2. (A)\n"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Exercise 2. (A)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Exercise 2. (B) I."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Exercise 2. (B) I."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T15:01:04.550685400Z",
+     "start_time": "2023-11-29T15:01:04.529620300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "[1, 0, 0, 1, 0, 1, 1, 1, 1, 0]"
+      "text/plain": [
+       "[1, 0, 0, 1, 0, 1, 1, 1, 1, 0]"
+      ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,29 +95,28 @@
     "\n",
     "result = bag_of_words(input_sentence, vocabulary)\n",
     "\n",
-    "\n",
     "result"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T15:01:04.550685400Z",
-     "start_time": "2023-11-29T15:01:04.529620300Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Exercise 2. (B) II."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Exercise 2. (B) II."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T15:07:10.585049Z",
+     "start_time": "2023-11-29T15:07:10.562989600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,29 +171,32 @@
     "# Print TF-IDF representation\n",
     "for word in tf_idf:\n",
     "    print(f\"Word: {word}, TF: {tf[word]}, IDF: {idf[word]}, TF-IDF: {tf_idf[word]}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T15:07:10.585049Z",
-     "start_time": "2023-11-29T15:07:10.562989600Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T18:45:48.185124400Z",
+     "start_time": "2023-11-28T18:45:48.176324100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF representation: [0.015051502236832335, 0.0, 0.0, 0.13089867598202215, 0.0, 0.0, 0.22991970177630003, 0.4279617533648558, 0.02321698992825356, 0.0]\n"
+      "TF-IDF representation of vocabulary for sentence:\n",
+      "[0.015051502236832335, 0.0, 0.0, 0.13089867598202215, 0.0, 0.07297508910942724, 0.22991970177630003, 0.4279617533648558, 0.02321698992825356, 0.0]\n"
      ]
     }
    ],
    "source": [
     "vocabulary = [\"and\", \"apple\", \"banana\", \"eat\", \"hate\", \"I\", \"pie\", \"strawberry\", \"the\", \"they\"]\n",
+    "# lower case all words in the vocabulary\n",
+    "vocabulary = [word.lower() for word in vocabulary]\n",
     "\n",
     "document_counts = [90, 30, 15, 40, 10, 60, 20, 5, 85, 30]\n",
     "\n",
@@ -212,53 +223,30 @@
     "    # Append TF-IDF value to the representation\n",
     "    tfidf_representation.append(tfidf)\n",
     "\n",
-    "print(\"TF-IDF representation:\", tfidf_representation)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T18:45:48.185124400Z",
-     "start_time": "2023-11-28T18:45:48.176324100Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.0"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T18:46:40.400100500Z",
-     "start_time": "2023-11-28T18:46:40.376338700Z"
-    }
-   }
+    "print(\"TF-IDF representation of vocabulary for sentence:\")\n",
+    "print(tfidf_representation)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "References\n",
     " - https://www.learndatasci.com/glossary/tf-idf-term-frequency-inverse-document-frequency/#:~:text=The%20TF%2DIDF%20of%20a,multiplying%20TF%20and%20IDF%20scores.&text=Translated%20into%20plain%20English%2C%20importance,between%20documents%20measured%20by%20IDF."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T17:03:43.860357400Z",
+     "start_time": "2023-11-28T17:03:39.407274100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -322,18 +310,18 @@
     "\n",
     "            generated_sequence = torch.cat(generated_sequence, dim=1)\n",
     "            return generated_sequence"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T17:03:43.860357400Z",
-     "start_time": "2023-11-28T17:03:39.407274100Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-29T15:09:18.527840100Z",
+     "start_time": "2023-11-29T15:09:18.507841300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class RNNLM(nn.Module):\n",
@@ -390,23 +378,16 @@
     "            x = pred.unsqueeze(0)\n",
     "\n",
     "        return decoded_tokens"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-29T15:09:18.527840100Z",
-     "start_time": "2023-11-29T15:09:18.507841300Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -418,14 +399,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
