Minor changes added to TF-IDF

--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-28T18:45:48.185124400Z",
@@ -188,8 +188,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Word: and, TF: 0.142857, IDF: 0.105361, TF-IDF: 0.015052\n",
+      "Word: apple, TF: 0.0, IDF: 1.203973, TF-IDF: 0.0\n",
+      "Word: banana, TF: 0.0, IDF: 1.89712, TF-IDF: 0.0\n",
+      "Word: eat, TF: 0.142857, IDF: 0.916291, TF-IDF: 0.130899\n",
+      "Word: hate, TF: 0.0, IDF: 2.302585, TF-IDF: 0.0\n",
+      "Word: i, TF: 0.142857, IDF: 0.510826, TF-IDF: 0.072975\n",
+      "Word: pie, TF: 0.142857, IDF: 1.609438, TF-IDF: 0.229919\n",
+      "Word: strawberry, TF: 0.142857, IDF: 2.995732, TF-IDF: 0.427961\n",
+      "Word: the, TF: 0.142857, IDF: 0.162519, TF-IDF: 0.023217\n",
+      "Word: they, TF: 0.0, IDF: 1.203973, TF-IDF: 0.0\n",
+      "\n",
       "TF-IDF representation of vocabulary for sentence:\n",
-      "[0.015051502236832335, 0.0, 0.0, 0.13089867598202215, 0.0, 0.07297508910942724, 0.22991970177630003, 0.4279617533648558, 0.02321698992825356, 0.0]\n"
+      "[0.015052, 0.0, 0.0, 0.130899, 0.0, 0.072975, 0.229919, 0.427961, 0.023217, 0.0]\n"
      ]
     }
    ],
@@ -208,21 +219,28 @@
     "words = sentence.lower().split()\n",
     "\n",
     "# Compute TF-IDF representation\n",
+    "tf_representation = []\n",
+    "idf_representation = []\n",
     "tfidf_representation = []\n",
     "\n",
     "for term in vocabulary:\n",
     "    # Compute TF (Term Frequency)\n",
-    "    tf = words.count(term) / len(words) if len(words) > 0 else 0\n",
+    "    tf = round(words.count(term) / len(words) if len(words) > 0 else 0, 6)\n",
+    "    tf_representation.append(tf)\n",
     "\n",
     "    # Compute IDF (Inverse Document Frequency)\n",
-    "    idf = math.log(total_documents / document_counts[vocabulary.index(term)])\n",
+    "    idf = round(math.log(total_documents / document_counts[vocabulary.index(term)]), 6)\n",
+    "    idf_representation.append(idf)\n",
     "\n",
     "    # Compute TF-IDF\n",
-    "    tfidf = tf * idf\n",
-    "\n",
+    "    tfidf = round(tf * idf, 6)\n",
     "    # Append TF-IDF value to the representation\n",
     "    tfidf_representation.append(tfidf)\n",
     "\n",
+    "for word, tf, idf, tfidf in zip(vocabulary, tf_representation, idf_representation, tfidf_representation):\n",
+    "    print(f\"Word: {word}, TF: {tf}, IDF: {idf}, TF-IDF: {tfidf}\")\n",
+    "\n",
+    "print()\n",
     "print(\"TF-IDF representation of vocabulary for sentence:\")\n",
     "print(tfidf_representation)"
    ]
