--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-29T15:00:42.193241700Z",
-     "start_time": "2023-11-29T15:00:37.112580600Z"
+     "end_time": "2023-11-29T19:08:15.716549300Z",
+     "start_time": "2023-11-29T19:08:10.791370700Z"
     }
    },
    "outputs": [],
@@ -66,6 +66,7 @@
    ],
    "source": [
     "def bag_of_words(sentence, vocabulary):\n",
+    "\n",
     "    # Initialize a vector with zeros for each word in the vocabulary\n",
     "    bag_of_words_vector = [0] * len(vocabulary)\n",
     "\n",
@@ -102,6 +103,50 @@
    "source": [
     "### Exercise 2. (B) II."
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m tf_I \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m60\u001B[39m\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m10\u001B[39m\n\u001B[1;32m----> 2\u001B[0m IDF_I \u001B[38;5;241m=\u001B[39m \u001B[43mmath\u001B[49m\u001B[38;5;241m.\u001B[39mlog(\u001B[38;5;241m100\u001B[39m\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m60\u001B[39m)\n\u001B[0;32m      3\u001B[0m TF_IDF_I \u001B[38;5;241m=\u001B[39m tf_I \u001B[38;5;241m*\u001B[39m IDF_I\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(TF_IDF_I)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'math' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tf_I = 60/10\n",
+    "IDF_I = math.log(100/60)\n",
+    "TF_IDF_I = tf_I * IDF_I\n",
+    "print(TF_IDF_I)\n",
+    "\n",
+    "tf_I = 60/10\n",
+    "IDF_I = math.log(100/60)\n",
+    "TF_IDF_I = tf_I * IDF_I\n",
+    "print(TF_IDF_I)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-29T19:08:06.348145900Z",
+     "start_time": "2023-11-29T19:08:06.035239Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -251,6 +296,15 @@
    "source": [
     "References\n",
     " - https://www.learndatasci.com/glossary/tf-idf-term-frequency-inverse-document-frequency/#:~:text=The%20TF%2DIDF%20of%20a,multiplying%20TF%20and%20IDF%20scores.&text=Translated%20into%20plain%20English%2C%20importance,between%20documents%20measured%20by%20IDF."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Exercise 2. (C)"
    ],
    "metadata": {
     "collapsed": false
