--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-29T15:00:42.193241700Z",
-     "start_time": "2023-11-29T15:00:37.112580600Z"
-    },
-    "collapsed": true
+     "end_time": "2023-12-01T21:12:05.729747300Z",
+     "start_time": "2023-12-01T21:12:02.953693Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,13 +34,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "When we anticipate numerous out-of-vocabulary (OOV) words during test, the preferred tokenization method would be **subword tokenization**, because it excels at handling OOV words by decomposing them into smaller, more common subunits known as subwords. By representing OOV words using subwords, the model can still capture meaningful information from these words, even if they haven't been explicitly encountered during training.\n",
+    "\n",
+    "\n",
+    "Subword tokenization approaches fall into two main categories. **WordPiece** which splits words into character subsequences based on a predefined vocabulary of subwords. It's particularly effective as it can generate subwords that correspond to meaningful morphemes.\n",
+    "**Byte Pair Encoding (BPE)** iteratively merges the most frequent byte pairs in the corpus until it reaches a specified vocabulary size. Unlike WordPiece, BPE doesn't need a predefined vocabulary, making it more adaptable to new words and languages.\n",
+    "\n",
+    "\n",
+    "\n",
+    "In situations where OOV words are prevalent, **subword tokenization** offers several advantages over traditional word-based tokenization:\n",
+    "**Reduced OOV Rate**: Subwords effectively decompose OOV words into known units, significantly reducing the number of true OOV tokens encountered by the model.\n",
+    "\n",
+    "**Improved Representation**: By representing OOV words using subwords, the model can still extract contextual information and semantic relationships from these words, even if they haven't been explicitly trained on.\n",
+    "\n",
+    "**Vocabulary Flexibility**: Subword tokenization techniques don't require a fixed vocabulary, allowing the model to adapt to new words and languages without explicit vocabulary updates.\n",
+    "\n",
+    "Therefore, **subword tokenization** is the preferred choice for scenarios where OOV words are expected, as it effectively handles these rare words while still preserving meaningful information for model training and prediction."
+   ],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   }
   },
   {
    "cell_type": "markdown",
@@ -48,8 +63,18 @@
     "collapsed": false
    },
    "source": [
-    "### Exercise 2. (B) I."
+    "### References:\n",
+    " - https://www.datacamp.com/blog/what-is-tokenization"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Exercise 2. (B) I.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -109,79 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-29T15:07:10.585049Z",
-     "start_time": "2023-11-29T15:07:10.562989600Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Word: and, TF: 1, IDF: 0.10536051565782635, TF-IDF: 0.10536051565782635\n",
-      "Word: I, TF: 1, IDF: 0.5108256237659907, TF-IDF: 0.5108256237659907\n",
-      "Word: eat, TF: 1, IDF: 0.9162907318741551, TF-IDF: 0.9162907318741551\n",
-      "Word: the, TF: 1, IDF: 0.16251892949777494, TF-IDF: 0.16251892949777494\n",
-      "Word: strawberry, TF: 1, IDF: 2.995732273553991, TF-IDF: 2.995732273553991\n",
-      "Word: pie, TF: 1, IDF: 1.6094379124341003, TF-IDF: 1.6094379124341003\n"
-     ]
+     "end_time": "2023-12-01T21:12:15.483330700Z",
+     "start_time": "2023-12-01T21:12:15.456780Z"
     }
-   ],
-   "source": [
-    "vocabulary = {\n",
-    "    'and': 90,\n",
-    "    'apple': 30,\n",
-    "    'banana': 15,\n",
-    "    'eat': 40,\n",
-    "    'hate': 10,\n",
-    "    'I': 60,\n",
-    "    'pie': 20,\n",
-    "    'strawberry': 5,\n",
-    "    'the': 85,\n",
-    "    'they': 30\n",
-    "}\n",
-    "\n",
-    "# Given sentence\n",
-    "sentence = \"You and I eat the strawberry pie\"\n",
-    "\n",
-    "# Calculate TF\n",
-    "tf = {}\n",
-    "for word in sentence.split():\n",
-    "    tf[word] = tf.get(word, 0) + 1\n",
-    "\n",
-    "# Calculate IDF\n",
-    "idf = {}\n",
-    "total_documents = 100\n",
-    "for word in vocabulary:\n",
-    "    document_frequency = vocabulary[word]\n",
-    "    idf[word] = math.log(total_documents / document_frequency)\n",
-    "\n",
-    "# Calculate TF-IDF\n",
-    "tf_idf = {}\n",
-    "for word in tf:\n",
-    "    try:\n",
-    "        tf_idf[word] = tf[word] * idf[word]\n",
-    "    except KeyError:\n",
-    "        pass\n",
-    "\n",
-    "# Print TF-IDF representation\n",
-    "for word in tf_idf:\n",
-    "    print(f\"Word: {word}, TF: {tf[word]}, IDF: {idf[word]}, TF-IDF: {tf_idf[word]}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-28T18:45:48.185124400Z",
-     "start_time": "2023-11-28T18:45:48.176324100Z"
-    },
-    "collapsed": false
    },
    "outputs": [
     {
@@ -254,6 +213,15 @@
     "References\n",
     " - https://www.learndatasci.com/glossary/tf-idf-term-frequency-inverse-document-frequency/#:~:text=The%20TF%2DIDF%20of%20a,multiplying%20TF%20and%20IDF%20scores.&text=Translated%20into%20plain%20English%2C%20importance,between%20documents%20measured%20by%20IDF."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Exercise"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
